# shogun

./: .gitignore  CLAUDE.md  README.md  audit.md  build_demo.py  demo.html  demo_v2.html  demo_v3.html  graph_scenario_demo.html  main.py  pyproject.toml  test.html
data/: 231123_Duty_of_Care_Policy.qa.json  231123_Duty_of_Care_Policy.qa.small.json  DT_chunks.json  DT_first_pass.json  chunks.json  duty_of_care.md  example_segment_output.txt  extractions.json  extractions_merged.json  extractions_merged_dedup_log.json  extractions_test.json  ontology.json  ontology_mock.json  ontology_no_dedup.json  sample_policy.md  short_chunks.json  short_extractions.json  short_first_pass.json  t.txt  test_chunks.json  test_doc.md  test_extraction.json  test_extraction2.json  test_ontology.json
docs/: Business Plan.md  Takeaways.md  email-update.md  extraction_improvement_prompt.md  improvement-plan.md  langchain_vs_shogun_analysis.md  merge_dedup_improvement_prompt.md  new_schema.txt  operational-improvement.md  rag-research-2025.md  rag_implementation_plan.md  rag_strategy.md  schema_info.txt  tasks.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
plans/: neo4j_migration.md  ontology_extraction_pipeline.md  schema_implementation.md
prompts/: v1_parser_backup.py
scripts/: assemble_demo.py  find_mojibake.py  gen_demo_scenarios.py  langchain_kg_baseline.py  langchain_kg_poc.py
src/: __init__.py  agent.py  agent_repl.py  api_models.py  base_models.py  build_graph.py  cross_section.py  eval.py  extraction.py  first_pass.py  frontend.py  graph.py  (+17 more)
(+96 files in other folders)
