[project]
name = "shogun"
version = "0.1.0"
description = "Duty of Care Compliance Agent — ontology graph constructor + reasoning agent for travel policy automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "networkx>=3.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.27.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
